# pqc-scanner-samples

./: .gitignore  BENCHMARKS.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  VULNERABILITY_INDEX.md
crypto-messenger/: .pqc-scanner.toml  README.md  requirements.txt
crypto-messenger/app/crypto/: key_exchange.py  message_crypto.py  signatures.py
crypto-messenger/app/models/: user.py
crypto-messenger/app/routes/: messages.py
crypto-messenger/tests/: test_crypto.py
iot-device/: .pqc-scanner.toml  CMakeLists.txt  README.md
iot-device/src/crypto/: device_auth.cpp  firmware_verify.cpp  message_crypto.cpp
iot-device/src/network/: mqtt_client.cpp
iot-device/src/storage/: key_manager.cpp
legacy-banking/: .pqc-scanner.toml  README.md  VULNERABILITIES.md  package-lock.json  package.json
legacy-banking/.claude-flow/metrics/: performance.json  task-metrics.json
legacy-banking/src/auth/: password-hasher.js  session-manager.js
legacy-banking/src/crypto/: key-generator.js  transaction-signer.js
legacy-banking/src/utils/: random.js
legacy-banking/tests/: crypto.test.js
old-web-framework/: .pqc-scanner.toml  README.md  pom.xml
old-web-framework/src/main/java/com/example/config/: CookieConfig.java  SecurityConfig.java
old-web-framework/src/test/java/: SecurityTests.java
polyglot-app/: .pqc-scanner.toml  README.md
polyglot-app/backend/: crypto_service.py
polyglot-app/frontend/: crypto-utils.js
polyglot-app/legacy-service/: LegacyCrypto.java
polyglot-app/lib-crypto/src/: lib.rs
polyglot-app/microservices/: crypto.go
(+4 files in other folders)
